#22 Minor changes